src/styles/app.css
/* ... */
h1 {
    margin: 0 0 0.5em 0;
    font-size: 4rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    h1 {
        font-size: 2rem;
    }
}

h2 {
    margin: 1.5em 0 0.5em 0;
    font-size: 2rem;
}
@media (max-width: 500px) {
    h2 {
        font-size: 1.8rem;
    }
}

h3 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.8rem;
    font-weight: 500;
}
@media (max-width: 500px) {
    h3 {
        font-size: 1.7rem;
    }
}

h4 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.6rem;
    font-weight: 500;
}

h5 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.4rem;
    font-weight: 500;
}

h6 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.4rem;
    font-weight: 500;
}

/* Layout
/* ---------------------------------------------------------- */

.viewport {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
}

.container {
    max-width: 1120px;
    margin: 0 auto;
    padding: 0 4vw;
}

.content {
    max-width: 720px;
    margin: 3vw auto;
    font-size: 2rem;
    line-height: 1.7em;
}

.content-title {
    font-size: 5rem;
}
@media (max-width: 500px) {
    .content-title {
        font-size: 2.2rem;
    }
    .content {
        font-size: 1.8rem;
    }
}

.content-body {
    font-family: var(--font-serif);
}

.content-body h1,
.content-body h2,
.content-body h3,
.content-body h4,
.content-body h5,
.content-body h6 {
    font-family: var(--font-sans-serif);
}

/* Header
/* ---------------------------------------------------------- */

.site-head {
    padding-top: 20px;
    padding-bottom: 20px;
    color: #fff;
    background: var(--color-base);
}

.site-nav-item {
    padding: 5px 10px;
    color: #fff;
    opacity: 0.7;
}

.site-nav-item:hover {
    text-decoration: none;
    opacity: 1;
}

.site-nav-icon {
    height: 15px;
    margin: -5px 0 0;
}

.site-logo {
    height: 25px;
}

.site-mast {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.site-mast-right {
    display: flex;
    align-items: center;
    margin: 0 -10px 0 20px;
}

.site-banner {
    max-width: 80%;
    margin: 0 auto;
    padding: 10vw 0;
    text-align: center;
}

.site-banner-title {
    margin: 0;
    padding: 0;
    color: #fff;
    font-size: 4rem;
    line-height: 1.3em;
}

.site-banner-desc {
    margin: 5px 0 0 0;
    padding: 0;
    font-size: 2.4rem;
    line-height: 1.3em;
    opacity: 0.7;
}

.site-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 15px 0 0 0;
}

.site-nav-left {
    margin: 0 20px 0 -10px;
}

.site-nav-right {
    margin: 0 -10px 0 20px;
}

/* Main
/* ---------------------------------------------------------- */

.site-main {
    padding: 4vw 0;
}

/* Index
/* ---------------------------------------------------------- */

.post-feed {
    display: grid;
    justify-content: space-between;
    grid-gap: 30px;
    grid-template-columns: 1fr 1fr 1fr;
}

@media (max-width: 980px) {
    .post-feed {
        grid-template-columns: 1fr 1fr;
    }
}
@media (max-width: 680px) {
    .post-feed {
        grid-template-columns: 1fr;
    }
}

.post-card {
    color: inherit;
    text-decoration: none;
}

.post-card:hover {
    text-decoration: none;
}

.post-card-tags {
    margin: 0 0 5px 0;
    font-size: 1.4rem;
    line-height: 1.15em;
    color: var(--color-secondary);
}


.post-card-title {
    margin: 0 0 10px 0;
    padding: 0;
}

.post-card-excerpt {
    font-size: 1.6rem;
    line-height: 1.55em;
}

.post-card-image {
    margin: 0 0 10px 0;
    width: auto;
    height: 200px;
    background: var(--color-secondary) no-repeat center center;
    background-size: cover;
}

.post-card-footer {
    display: flex;
    justify-content: space-between;
    margin: 10px 0 0 0;
    color: var(--color-secondary);
}


/* Tag Archives
/* ---------------------------------------------------------- */

.tag-header {
    max-width: 690px;
    margin: 0 0 4vw;
}

.tag-header h1 {
    margin: 0 0 1rem 0;
}

.tag-header p {
    margin: 0;
    color: var(--color-secondary);
    font-size: 2.2rem;
    line-height: 1.3em;
}

@media (max-width: 500px) {
    .tag-header {
        border-bottom: var(--color-bg) 1px solid;
        padding-bottom: 4vw;
    }
    .tag-header p {
        font-size: 1.7rem;
    }
}


/* Author Archives
/* ---------------------------------------------------------- */

.author-header {
    display: flex;
    justify-content: space-between;
    margin: 0 0 4vw;
}

.author-header h1 {
    margin: 0 0 1rem 0;
}

.author-header p {
    margin: 0;
    color: var(--color-secondary);
    font-size: 2.2rem;
    line-height: 1.3em;
}

.author-header-image {
    flex: 0 0 auto;
    margin: 0 0 0 4vw;
    height: 120px;
    width: 120px;
    border-radius: 100%;
    overflow: hidden;
}

.author-header-meta {
    display: flex;
    margin: 1rem 0 0 0;
}

.author-header-item {
    display: block;
    padding: 2px 10px;
}

.author-header-item:first-child {
    padding-left: 0;
}

@media (max-width: 500px) {
    .author-header {
        border-bottom: var(--color-bg) 1px solid;
        padding-bottom: 4vw;
    }
    .author-header p {
        font-size: 1.7rem;
    }
    .author-header-image {
        height: 80px;
        width: 80px;
    }
}

/* Pagination
/* ---------------------------------------------------------- */

.pagination {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 4vw 0 0;
}

.pagination a {
    display: inline-block;
    padding: 10px 15px;
    border: var(--color-border) 1px solid;
    color: var(--color-secondary);
    text-decoration: none;
    font-size: 1.4rem;
    line-height: 1em;
    border-radius: var(--radius);
}

.pagination-location {
    position: absolute;
    left: 50%;
    width: 100px;
    margin-left: -50px;
    text-align: center;
    color: var(--color-secondary);
    font-size: 1.3rem;
}
/* ... */

